--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^10.1.0",
+    "gotrue-js": "^0.9.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
